securitygroup-1.tf
resource "aws_security_group" "publicgroup1" {
  name        = "allow_ssh"
  description = "Allow ssh traffic"
  vpc_id      = module.network.myvpc_id

  ingress {
    description      = "ssh from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.workSpace}-public"
  }
}
